# arquitetura_graphql

node_graphql/: package.json
node_graphql/src/: database_config.ts  index.ts
node_graphql/src/entities/: UInput.ts  Users.ts
node_graphql/src/schema/: index.ts
node_graphql/src/schema/inputs/: UserInput.ts
node_graphql/src/schema/mutations/: User.ts
node_graphql/src/schema/queries/: User.ts
node_graphql/src/schema/type_defs/: User.ts
python_graphl/: pyproject.toml
vue_graphql/: README.md  package-lock.json  package.json
